# xls_telegram

./: Dockerfile  main.py  pyproject.toml
core/: config.py  google_sheet_api.py
